--- a/employeeDetails/employee_details.html
+++ b/employeeDetails/employee_details.html
@@ -11,6 +11,7 @@
     <button onclick="calculateTotalSalaries()">Calculate Total Salaries</button>
     <button onclick="displayHREmployees()">Display HR Employees</button>
     <button onclick="findEmployeeById(4)">Find Employee by ID 4</button>
+    <button onclick="findEmployeeBySpecialization('cybersecurity')">Find Employee by Specialization JavaScript</button>
   </div>
 
  <div id="employeesDetails"></div>
